Try to fix NotablePersonBody jumping while loading (#434)
Observations:

* It happens on all browsers, even on desktop, so it's not a Safari bug
* It happens only once when an NP page is loading for the first time. So it's most likely in `LodableNotablePerson`
* Looking at the structure of `loading` component in `LoadableNotablePerson` we see that it's not exactly the same as the fully loaded page:

```tsx
// loading
() => <NotablePersonBody />

// fully loaded
() => (
 <div classeName={classes.root}>
   <NotablePersonBody />
   {/* other components */}
 </div>
)
```

So I suspect it's being caused by some missing styles not being applied at the root of the loading component. We need to share some CSS rules between `LoadableNotablePerson` and `NotablePerson` and match the structure by adding a wrapper `<div />`.

It's very hard to test this in development because the styles are applied on the fly by `style-loader` and that causes a flash of unstyled text.

--- a/src/app/pages/NotablePerson/NotablePerson.module.scss
+++ b/src/app/pages/NotablePerson/NotablePerson.module.scss
@@ -2,10 +2,7 @@
 @import 'mixins.scss';
 
 .root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: $spacing-20px;
+  composes: root from './LoadableNotablePerson.module.scss';
 
   .card,
   .stub {
@@ -15,11 +12,6 @@
   .comments {
     margin-top: $spacing-30px;
     padding: $spacing-10px;
-  }
-
-  > * {
-    width: 100%;
-    max-width: $page-max-width;
   }
 
   .editorial-summary {
